syntax = 'proto3';

option go_package = 'protobuf/pb/common';

package common;

message BaseResponse {
  int64 status_code = 1;
  bool is_success = 2;
  string message = 3;
  repeated ValidationError validation_errors = 4;
}

message ValidationError {
  string field = 1;
  string message = 2;
}