syntax = "proto3";

package user;

option go_package = "protobuf/pb;user";

service UserService {
  rpc CreateUser (User) returns (CreateResponse);
}

message User {
  int64  id = 1;
  string full_name = 2;
  int64  age = 3;
  double balance = 4;
  bool is_active = 5;
  Address address = 6;
  repeated string educations = 7;
  string spouse_name = 8;
}

message Address {
  int64 id = 1;
  string full_address = 2;
  string province = 3;
  string city = 4;
}

message CreateResponse {
  string message = 1;
  User user = 2;
}